implemented first message passing

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,19 +7,14 @@
     "default_popup": "index.html",
     "default_title": "Use Tommy"
   },
-  "permissions": [
-    "activeTab"
-  ],
   "content_scripts": [
     {
-      "matches": [
-        "<all_urls>"
-      ],
-      "all_frames": true,
-      "js": [
-        "contentScript.js"
-      ]
+      "matches": ["<all_urls>"],
+      "js": ["jquery-3.6.1.min.js","contentScript.js"]
     }
+  ],
+  "permissions": [
+    "tabs"
   ],
   "icons": {
     "16": "logo192.png",
