added huspot services + get token from cookie

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,7 +14,11 @@
     }
   ],
   "permissions": [
-    "activeTab"
+    "activeTab",
+    "cookies"
+  ],
+  "host_permissions": [
+    "https://www.linkedin.com/"
   ],
   "icons": {
     "16": "logo192.png",
